--- a/package.json
+++ b/package.json
@@ -14,10 +14,19 @@
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.1.0",
+    "@angular/material": "^14.1.0",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "@riapacheco/yutes": "^4.0.8",
+    "@types/hopscotch": "^0.2.32",
+    "chart.js": "^3.8.2",
+    "hopscotch": "^0.3.1",
+    "ng2-charts": "^4.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
