--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^14.1.0",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
@@ -23,10 +24,18 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@riapacheco/yutes": "^4.0.8",
+    "@swimlane/ngx-datatable": "^20.0.0",
     "@types/hopscotch": "^0.2.32",
+    "angular-calendar": "^0.29.0",
     "chart.js": "^3.8.2",
+    "date-fns": "^2.29.1",
     "hopscotch": "^0.3.1",
     "ng2-charts": "^4.0.0",
+    "ng2-dragula": "^2.1.1",
+    "ng2-file-upload": "^1.4.0",
+    "ng2-validation": "^4.2.0",
+    "ngx-quill": "^18.0.0",
+    "perfect-scrollbar": "^1.5.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
